@@ -1,5 +1,6 @@
 ==== 2.5.1.dev0 ====
     * Running on MS Windows fix
+    * UTF-8 HTTP Digest username support
 
 ==== 2.5.0 ====
     * fix file callback on files smaller than 1000B
